syntax = "proto3";

option csharp_namespace = "OpenVASP.ProtocolMessages.Messages";

package protobuf_openvasp;
import "ProtoVaspInfo.proto";
import "ProtoMessage.proto";

message ProtoSessionReplyMessage {

  ProtoMessage message = 1;

  string topic_b = 2;

  string comment = 3;

  ProtoVaspInfo vasp_info = 4;
}
